'Emulate 3 button mouse' fails to emulate MMB #96279

Closed
opened 2022-03-09 22:45:53 +01:00 by Adrian Rutkowski · 8 comments

System Information
Operating system: Windows 11

Blender Version
Broken: 3.2.0 Alpha, 2146256563, master, 2022-03-08
Worked: 3.1 and below

Short description of error

for 'Emulate 3 button mouse' alt + LMB that should emulate MMB is not detected correctly anymore

Exact steps for others to reproduce the error

1 - enable 'Emulate 3 button mouse' option blender_RKbWR6mgGc.png

2 - hold ALT (all the time )

3 - hit LMB (MMB should be detected so viewport will rotate)

4 - release LMB but not alt

5 - hit LMB again (now it will not b detected as MMB even though alt + LMB are pressed)

**System Information** Operating system: Windows 11 **Blender Version** Broken: 3.2.0 Alpha, 21462565632b, master, 2022-03-08 Worked: 3.1 and below **Short description of error** for 'Emulate 3 button mouse' alt + LMB that should emulate MMB is not detected correctly anymore **Exact steps for others to reproduce the error** 1 - enable 'Emulate 3 button mouse' option ![blender_RKbWR6mgGc.png](https://archive.blender.org/developer/F12915119/blender_RKbWR6mgGc.png) 2 - hold ALT (all the time ) 3 - hit LMB (MMB should be detected so viewport will rotate) 4 - release LMB but not alt 5 - hit LMB again (now it will not b detected as MMB even though alt + LMB are pressed)

Added subscriber: @niewinny

Added subscriber: @niewinny
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.
Checking what exactly broke this functionality.

Thanks for the report. I can confirm. Checking what exactly broke this functionality.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

First bad commit- 08d8eee006
@ideasman42 hi, can you check?

First bad commit- 08d8eee006 @ideasman42 hi, can you check?
Campbell Barton self-assigned this 2022-03-10 10:04:03 +01:00

This issue was referenced by ef6d108b75

This issue was referenced by ef6d108b759711102a04ac5f9ab9dafffae473bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96279
No description provided.